Refactor, misc improvements